--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,4 +1,9 @@
 <h1>List of all users</h1>
+<form>
+  Search for a user:<br>
+  <input type="text" name="screenname">
+  <input type = "submit" value="Search">
+</form>
 {% if latest_user_list %}
     <div class="user_list">
     <ul>
