--- a/polls/templates/polls/user.html
+++ b/polls/templates/polls/user.html
@@ -1,4 +1,4 @@
-<form>
+<form method="POST">
   Search for a user:<br>
   <input type="text" name="screenname">
   <input type = "submit" value="Search">
