--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,15 +1,22 @@
 <h1>List of all users</h1>
-<form>
-  Search for a user:<br>
-  <input type="text" name="screenname">
+<form method="POST">
+  <label for="screenname">Search for a user:</label><br>
+  <input type="text" name="screenname" default="Enter username">
   <input type = "submit" value="Search">
 </form>
-{% if latest_user_list %}
+{% if searcheduser %}
+  <div class="user_list">
+    {% for user in searcheduser %}
+    <div class="user_row">
+    <li><a
+   </div>
+   {% endfor %}
+{% elif latest_user_list %}
     <div class="user_list">
     <ul>
     {% for user in latest_user_list %}
         <div class="user_row">    
-        <li><a href="/{{ user.screenname }}/">{{ user.screenname }}</a></li>
+        <li><a href="{%url 'user' user.screenname %}">{{ user.screenname }}</a></li>
         </div>
     {% endfor %}
     </ul>
