--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,5 +1,5 @@
 <h1>List of all users</h1>
-<form method="POST">
+<form  method="GET">
  {% csrf_token %}
  {{form}}
  <input type="submit" value="submit">
@@ -8,7 +8,7 @@
   <div class="user_list">
     {% for user in searcheduser %}
     <div class="user_row">
-    <li><a
+    <li><a href="{%url 'user' user.screenname %}">{{ user.screenname }}</a></li>
    </div>
    {% endfor %}
 {% elif latest_user_list %}
