--- a/polls/templates/polls/user.html
+++ b/polls/templates/polls/user.html
@@ -11,6 +11,7 @@
   <p>Location: {{user.location}}</p>
 {% endif %}
 <p> ID: {{user.user_id}}</p>
+<p> lastdate: {{age}}</p>
 {% if tweets %}
     <div class="tweet_list">
     <ul>
