--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,8 +1,10 @@
+{% load static %}
+<link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
 <h1>List of all users</h1>
 <form  method="GET">
  {% csrf_token %}
  {{form}}
- <input type="submit" value="submit">
+ <input type="submit" class="btn btn-primary" value="submit">
 </form>
 {% if searcheduser %}
   <div class="user_list">
