some navbar and styling

--- a/polls/templates/polls/details.html
+++ b/polls/templates/polls/details.html
@@ -6,7 +6,6 @@
 </head>
 <body>
 {% include "./navigation.html" %}
-<h1>Tweet von {{username}}</h1>
-{{tweet}}
+<h1>Here werden die Informationen für unsere Gruppe aufgelistet</h1>
 </body>
 </html>
