--- a/polls/templates/polls/queries.html
+++ b/polls/templates/polls/queries.html
@@ -6,7 +6,6 @@
 </head>
 <body>
 {% include "./navigation.html" %}
-<h1>Tweet von {{username}}</h1>
-{{tweet}}
+<h1>Here werden die Fragen aus der Aufgabe 2 beantwortet</h1>
 </body>
 </html>
