--- a/polls/templates/polls/queries.html
+++ b/polls/templates/polls/queries.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-{% load static %}
-<link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-</head>
-<body>
+
 {% include "./navigation.html" %}
 <h1>Here werden die Fragen aus der Aufgabe 2 beantwortet</h1>
+</div>
 </body>
 </html>
