--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-{% load static %}
-<link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-</head>
-<body>
 {% include "./navigation.html" %}
 {% if searcheduser %}
   <div class="user_list">
@@ -29,5 +22,6 @@
     <p>No such user found</p>
     </div>
 {% endif %}
+</div>
 </body>
 </html>
