--- a/polls/templates/polls/queries.html
+++ b/polls/templates/polls/queries.html
@@ -1,6 +1,7 @@
 
 {% include "./navigation.html" %}
 <h1>Here werden die Fragen aus der Aufgabe 2 beantwortet</h1>
+<p>{{query1}}</p>
 </div>
 </body>
 </html>
