--- a/polls/templates/polls/navigation.html
+++ b/polls/templates/polls/navigation.html
@@ -12,7 +12,7 @@
     <a class="navbar-brand">Mini Facebook</a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-          <li class="nav-item {% if nbar == 'start' %}active{% endif %}"><a href="/" class="nav-link">Start Page</a></li>
+          <li class="nav-item {% if nbar == 'start' %}active{% endif %} "><a href="/" class="nav-link">Start Page</a></li>
           <li class="nav-item {% if nbar == 'details' %}active{% endif %}"><a class="nav-link" href="/details">Group info</a></li>
           <li class="nav-item {% if nbar == 'queries' %}active{% endif %}"><a class="nav-link" href="/queries">Queries</a></li>
     </ul>
@@ -31,4 +31,4 @@ $( '#topheader .navbar-nav a' ).on( 'click', function () {
 	$( this ).parent( 'li' ).addClass( 'active' );
 });
 </script>
-<div id="content">
+<div class="container">
