--- a/polls/templates/polls/tweet.html
+++ b/polls/templates/polls/tweet.html
@@ -7,5 +7,8 @@
 {{age}}
 {% endfor %}
 </div>
+<form class="forma"action="/{{username}}" method="GET">
+<input  id="buttontoreturn" type="submit" class="btn btn-primary mb-2" value="return">
+</form>
 </body>
 </html>
